--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url('./main.PNG') no-repeat center top;
+    background: url('./image/main.PNG') no-repeat center top;
     background-size: 100vw;
     min-height: 100%;
     overflow: auto;
