--- a/style.css
+++ b/style.css
@@ -97,8 +97,14 @@ body {
     font-style: normal;
 }
 .answer-img {
-    width: 10vw;
-    height: 10vw;
+    width: 15vw;
+    height: 15vw;
 
     position: absolute;
 }
+.grade-img {
+     width: 10vw;
+     height: 10vw;
+
+     position: absolute;
+ }
