--- a/demo/src/main/resources/static/style.css
+++ b/demo/src/main/resources/static/style.css
@@ -46,9 +46,10 @@ body {
 #submit {
     display: block;
     position: relative;
-    bottom: 10vw;
+    bottom: 15vw;
     font-size: 2vw;
     float: right;
+    right: 15vw;
     background-color: white;
     border-color: white;
 }
